--- a/91-Appendix-functions.tex
+++ b/91-Appendix-functions.tex
@@ -63,7 +63,7 @@ When looking at $\mathcal P$ as a functor, we have to restrict it from $\cat{Set
     $$
         U' = \set{(\varphi_A(\pi_1(u)),\varphi_B(\pi_2(u)))\mid u\in U},
     $$
-    which is well-defined because, given $u\in U$, we can write $u=(x,f(x))$ and get
+    which is well defined because, given $u\in U$, we can write $u=(x,f(x))$ and get
     $$
         (\varphi_A(\pi_1(u)),\varphi_B(\pi_2(u)))
         = (\varphi_A(x),\varphi_B(f(x)))
