--- a/bibliography.bib
+++ b/bibliography.bib
@@ -92,3 +92,12 @@
   note      = {Originally published: San Francisco : W.H. Freeman, 1972; Includes bibliographical references and indexes; Printed on acid-free paper.},
   lccn      = {92-7736}
 }
+
+@article{Stanton1996,
+  author  = {Stanton, R.G.},
+  title   = {A Combinatorial Approach to Small Projective Geometries},
+  journal = {Bulletin of the ICA},
+  volume  = {17},
+  year    = {1996},
+  pages   = {63--70}
+}
